src/components/Table/Table.css
@media screen and (min-width: 360px) {
  .table-wrapper {
    width: 100%;
    margin-bottom: 10px;
    margin-top: 15px;
    overflow-y: auto;
  }

  table {
    width: 100%;
    font-size: 11.4px;
    border-spacing: 0;
  }

  thead {
    width: 100%;
    display: table;
    position: sticky;
    top: 0;
    font-size: 18px;
    font-weight: 700;
    border-radius: 10px 0 0 0;
    background: linear-gradient(
        0deg,
        rgba(255, 255, 255, 0.9),
        rgba(255, 255, 255, 0.9)
      ),
      #3682df;
  }

  .header-cell {
    text-transform: none;
  }

  .currency-comparison-cell-inside-wrapper {
    display: flex;
    justify-content: space-between;
    align-items: center;
    font-weight: 700;
  }

  .details-vector {
    width: 25px;
    height: 28px;
    margin-right: 5px;
    background: url("../../img/Vector.png") no-repeat center center;
    cursor: pointer;
  }

  .info-cell {
    display: inline-block;
    border: none;
    text-transform: capitalize;
  }

  .middle-cell {
    border-left: 1px solid rgba(194, 201, 209, 0.596);
    border-right: 1px solid rgba(194, 201, 209, 0.596);
  }

  tr {
    width: 100%;
    height: 40px;
    display: table;
  }

  td {
    width: 33.33%;
    padding: 0;
    padding-left: 4px;
    border-bottom: 1px solid rgba(194, 201, 209, 0.596);
    text-transform: uppercase;
  }
}

@media screen and (min-width: 1024px) {
  .table-wrapper {
    margin-top: 45px;
  }

  table {
    font-size: 12px;
  }

  thead {
    font-size: 20px;
  }

  .header-cell {
    padding-top: 8px;
    padding-bottom: 2px;
  }

  td {
    padding-left: 15px;
  }
}

